  (now only the visible text is repainted) 
- Some bugfixes in the KWFormatContext and in printing lines

Reggie, 15.9.1998:
------------------
- Fixed a bug with setting formats
- Added some new GUI stuff

Reggie, 16.9.1998:
------------------
- Started working on alignments/flows. Now you can choose the flow
  for the current paragraph via the toolbar, and the toolbar is
  updated automatically when moving the cursor. Now I have to
  work on the implementation of CENTER and RIGHT, this is really
  broken at the moment...

Reggie, 17.9.1998:
------------------
- Started working on CENTER flow
- Started writing a dialog for paragraph settings

Reggie, 18.9.1998:
------------------
- Worked on paragraph settings dialog (started a cool preview widget)
- Fixed a redraw problem (with setting some clippings)

Reggie, 19.9.1998:
------------------
- Worked on paragraph settings dialog
- Some improvements with linebreaking
- Fixed bug in cursor navigation
- Fixed bug in "Blocksatz"

Reggie, 20.9.1998:
------------------
- Implemented configurable left indent and first line left indent
- Fixed some bugs in cursor navigation
- Fixed a bug in Key_Backspace
- Automatically recalc/update of the cursor, if a new page/paragraph layout is set 

Reggie, 21.9.1998:
------------------
- Using new interactive KoRuler (which I started writing today) instead of KRuler.
- First trial of linespacing... 

Reggie, 22.9.1998:
------------------
- Fixed a bug in Key_Enter
- Implemented more ruler stuff (this works great now :-)
- Cleaned some GUI stuff

Reggie, 23.9.1998:
------------------
- Indents are configuarble with the ruler now
- Fixed a bug with indents and makeing the line format (line-breaking)
- Another fix with indents and redrawing

Reggie, 24.9.1998:
------------------
- Started implementing: Insert, display and format pictures as character.
  It already works somehow...

Reggie, 25.9.1998:
------------------
- More work on pictures as characters